--- a/files/etc/ulogd.conf
+++ b/files/etc/ulogd.conf
@@ -84,10 +84,10 @@ stack=ulog1:ULOG,base1:BASE,ip2str1:IP2STR,print1:PRINTPKT,emu2:LOGEMU
 #stack=log1:NFLOG,xml1:XML
 
 # this is a stack for accounting-based logging via XML
-stack=acct1:NFACCT,xml1:XML
+# stack=acct1:NFACCT,xml1:XML
 
 # this is a stack for accounting-based logging to a Graphite server
-stack=acct1:NFACCT,graphite1:GRAPHITE
+#stack=acct1:NFACCT,graphite1:GRAPHITE
 
 # this is a stack for NFLOG packet-based logging to PCAP
 #stack=log2:NFLOG,base1:BASE,pcap1:PCAP
