--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -17,7 +17,7 @@ server {
     server_name {{ h }};
 
     error_log {{data.data.logdir}}/redirect{{ h }}-error.log {{data.loglevel}};
-    access_log  {{data.data.logdir}}/redirect{{ h }}-access.log {{data.data.logformat}};
+    access_log  {{data.data.logdir}}/redirect{{ h }}-access.log {{data.data.logformat}} if=$method_loggable;
 
     # feed the map variables for ssl up
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
@@ -58,7 +58,7 @@ server {
     server_name {{ h }};
 
     error_log {{data.data.logdir}}/ssl_redirect{{ h }}-error.log {{data.loglevel}};
-    access_log  {{data.data.logdir}}/ssl_redirect{{ h }}-access.log {{data.data.logformat}};
+    access_log  {{data.data.logdir}}/ssl_redirect{{ h }}-access.log {{data.data.logformat}} if=$method_loggable;
 
     # feed the map variables for ssl up
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
