--- a/files/etc/postgresql/postgresql.conf
+++ b/files/etc/postgresql/postgresql.conf
@@ -549,7 +549,7 @@ default_text_search_config = '{{conf.catalog}}'
 
 #dynamic_library_path = '$libdir'
 local_preload_libraries = 'pgextwlist'
-extwlist.extensions = 'hstore,cube,postgis,pgrouting,postgis_topology,fuzzystrmatch,postgis_tiger_geocoder'
+extwlist.extensions = 'pgrowlocks,tsm_system_time,postgis_tiger_geocoder,seg,btree_gist,isn,pg_visibility,address_standardizer_data_us,pg_stat_statements,cube,pgstattuple,uuid-ossp,tablefunc,timetravel,intarray,autoinc,postgis_topology,dict_xsyn,earthdistance,pg_trgm,dblink,postgres_fdw,pg_freespacemap,insert_username,pgcrypto,refint,dict_int,btree_gin,pgrouting,postgis,adminpack,pg_prewarm,hstore,fuzzystrmatch,file_fdw,intagg,citext,xml2,lo,postgis_sfcgal,tcn,tsm_system_rows,plpgsql,address_standardizer,ltree,chkpass,pageinspect,sslinfo,unaccent,pg_buffercache,bloom,tsearch2,moddatetime'
 
 
 #------------------------------------------------------------------------------
