--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -178,6 +178,9 @@ http {
         default $server_port;
         1 443;
     }
+    {% if data.get('proxy_temp_path', '') %}
+    proxy_temp_path data.proxy_temp_path;
+    {% endif %}
 
     # Enabled Virtualhosts are present in this directory (as zz_vhost_* symlinks) -- like a sites-enabled in fact--
     # with also any specific conf (from distribution, for example)
