nginx variables_hash_bucket_size managment

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -70,7 +70,8 @@ http {
     server_tokens on;
     {% endif %}
 
-    server_names_hash_bucket_size 78;
+    server_names_hash_bucket_size {{data.server_names_hash_bucket_size}};
+    variables_hash_bucket_size {{data.variables_hash_bucket_size}};
     {% if data.server_name_in_redirect %}
     server_name_in_redirect on;
     {% else%}
