--- a/files/etc/rsyslog.conf
+++ b/files/etc/rsyslog.conf
@@ -5,7 +5,7 @@
 #			/usr/share/doc/rsyslog-doc/html/rsyslog_conf.html
 #
 #  Default logging rules can be found in /etc/rsyslog.d/50-default.conf
-{% set data = salt['mc_utils.json_load'](data) %}
+{% set data = salt['mc_rsyslog.settings']() %}
 
 #################
 #### MODULES ####
