--- a/files/etc/rsyslog.d/49-udp.conf
+++ b/files/etc/rsyslog.d/49-udp.conf
@@ -1,6 +1,6 @@
 # MANAGED VIA SALT -- DO NOT EDIT
 # provides UDP syslog reception
-{% set data = salt['mc_utils.json_load'](data) %}
+{% set data = salt['mc_rsyslog.settings']() %}
 {% if data.udp_port %}
 $ModLoad imudp
 $UDPServerAddress {{data.listen_addr}}
