--- a/files/etc/rsyslog.d/50-default.conf
+++ b/files/etc/rsyslog.d/50-default.conf
@@ -1,5 +1,5 @@
 # MANAGED VIA SALT -- DO NOT EDIT
-{% set data = salt['mc_utils.json_load'](data) %}
+{% set data = salt['mc_rsyslog.settings']() %}
 #  Default rules for rsyslog.
 #
 #			For more information see rsyslog.conf(5) and /etc/rsyslog.conf
