--- a/files/etc/rsyslog.d/haproxy.conf
+++ b/files/etc/rsyslog.d/haproxy.conf
@@ -1,5 +1,5 @@
 # MANAGED VIA SALT -- DO NOT EDIT
-{% set data = salt['mc_utils.json_load'](data) %}
+{% set data = salt['mc_rsyslog.settings']() %}
 # Create an additional socket in haproxy's chroot in order to allow logging via
 
 {% if data.haproxy %}
