nginx; default server

--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -12,7 +12,7 @@ include {{data.vhost_top_file}};
 server {
     listen {{ data.port }} {{shttp2}};
     {% if data.v6 %}
-    listen [::]:{{data.port}} {% if data.default_server%}default_server {%endif%}ipv6only=on{{shttp2}};
+    listen [::]:{{data.port}} ipv6only=on{{shttp2}};
     {% endif %}
     server_name {{ h }};
 
@@ -78,9 +78,9 @@ server {
 {% endfor %}
 {% endif %}
 server {
-    listen {{ data.port }};
+    listen {{ data.port }} {% if data.default_server%}default_server {%endif%};
     {% if data.v6 %}
-    listen [::]:{{data.port}}  {% if data.default_server%}default_server {%endif%}ipv6only=on;
+    listen [::]:{{data.port}} {% if data.default_server%}default_server {%endif%}ipv6only=on;
     {% endif %}
     server_name {{ data.server_name }}{% if (False == data.redirect_aliases) and data.server_aliases %} {{ data.server_aliases|join(' ') }}{%endif%};
 
@@ -130,9 +130,9 @@ server {
 {% endif %}
 
     ssl on;
-    listen {{ data.ssl_port }} ssl{{shttp2}};
+    listen {{ data.ssl_port }} {% if data.default_server%}default_server {%endif%}ssl{{shttp2}};
     {% if data.v6 %}
-    listen [::]:{{data.ssl_port}} ipv6only=on ssl{{shttp2}};
+    listen [::]:{{data.ssl_port}} {% if data.default_server%}default_server {%endif%}ipv6only=on ssl{{shttp2}};
     {% endif %}
     server_name {{ data.server_name }}{% if (False == data.redirect_aliases) and data.server_aliases %} {{ data.server_aliases|join(' ') }}{%endif%};
 
