remove ldap cache but keep it for old installs

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -118,7 +118,7 @@ http {
     include {{data.basedir}}/status_allowed_hosts.conf;
 
     # ldap cache
-    {% if data.get('ldap_cache', True) %}
+    {% if data.get('ldap_support', True) %}
     auth_ldap_cache_enabled on;
     auth_ldap_cache_expiration_time 10000;
     auth_ldap_cache_size 1000;
