--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -180,7 +180,7 @@ http {
         1 443;
     }
     {% if data.get('proxy_temp_path', '') %}
-    proxy_temp_path data.proxy_temp_path;
+    proxy_temp_path {{data.proxy_temp_path}};
     {% endif %}
 
     # Enabled Virtualhosts are present in this directory (as zz_vhost_* symlinks) -- like a sites-enabled in fact--
