--- a/ansible/roles/makinastates_lxc_vars/defaults/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/defaults/main.yml
@@ -9,7 +9,7 @@ lxc_backing_snapshot: null
 
 lxc_template: ubuntu
 lxc_os_release: xenial
-lxc_os_mirror: "http://mirror.ovh.net/ftp.ubuntu.com/ubuntu/"
+lxc_os_mirror: "http://archive.ubuntu.com/ubuntu/"
 lxc_template_options: '-r {lxc_os_release} --mirror "{lxc_os_mirror}"'
 
 lxc_auto_start: '1'
