fix apache logging

--- a/files/etc/apache2/conf.d/settings.conf
+++ b/files/etc/apache2/conf.d/settings.conf
@@ -1,6 +1,8 @@
 #
 # Timeout: The number of seconds before receives and sends time out.
 #
+
+{% set data = salt['mc_apache.settings']() %}
 Timeout {{ Timeout }}
 #
 # KeepAlive: Whether or not to allow persistent connections (more than
@@ -102,7 +104,17 @@ SSLSessionCache {{ssl_session_cache}}
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
+{% if data.no_options_log %}
+SetEnvIf Remote_Method "OPTIONS" dontlog
+{% endif %}
+{% if data.use_cronolog %}
 ErrorLog "|nice -n 10 /usr/bin/cronolog ${APACHE_LOG_DIR}/%Y/%W/%d-main-error.log"
+Customlog "|nice -n 10 /usr/bin/cronolog ${APACHE_LOG_DIR}/%Y/%W/%d-main-access.log" vhost_combined env=!dontlog
+{% else %}
+ErrorLog "${APACHE_LOG_DIR}/%Y/%W/%d-main-error.log"
+Customlog "${APACHE_LOG_DIR}/%Y/%W/%d-main-access.log" vhost_combined env=!dontlog
+{% endif %}
+
 #
 # LogLevel: Control the number of messages logged to the error_log.
 # Possible values include: debug, info, notice, warn, error, crit,
