--- a/files/etc/apache2/sites-available/virtualhost_template.conf
+++ b/files/etc/apache2/sites-available/virtualhost_template.conf
@@ -29,15 +29,21 @@ Include "{{data.ivhosttop}}.conf"
         rewrite ^/.*$ https://{{data.domain}};
     }
     {% endif %}
+    # Possible values include: debug, info, notice, warn, error, crit,
+    # alert, emerg.
+    LogLevel {{data.log_level}}
+
+    {% if data.use_cronolog %}
+    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-{{ data.server_name }}_access.log" vhost_combined env=!dontlog
+    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-{{ data.server_name }}_error.log"
+    {% else %}
+    CustomLog "${APACHE_LOG_DIR}/{{ data.server_name }}_access.log " vhost_combined env=!dontlog
+    ErrorLog "${APACHE_LOG_DIR}/{{ data.server_name }}_error.log"
+    {% endif %}
     # Most configurations of the Vhost are there
     # This is usefull to share configurations
     # between SSL and non-ssl Virtualhosts
     Include "{{data.ivhost}}.conf"
-    # Possible values include: debug, info, notice, warn, error, crit,
-    # alert, emerg.
-    LogLevel {{data.log_level}}
-    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-{{ data.server_name }}_error.log"
-    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-{{ data.server_name }}_access.log" vhost_combined
 </VirtualHost>
 
 #
@@ -85,14 +91,20 @@ Include "{{data.ivhosttop}}.conf"
     {% endif %}
     {{ssl_block()}}
 
+    # Possible values include: debug, info, notice, warn, error, crit,
+    # alert, emerg.
+    LogLevel {{data.log_level}}
+
+    {% if data.use_cronolog %}
+    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-{{ data.server_name }}_access.log" vhost_combined env=!dontlog
+    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-{{ data.server_name }}_error.log"
+    {% else %}
+    CustomLog "${APACHE_LOG_DIR}/{{ data.server_name }}_access.log" vhost_combined env=!dontlog
+    ErrorLog "${APACHE_LOG_DIR}/{{ data.server_name }}_error.log"
+    {% endif %}
     # Most configurations of the Vhost are there
     # This is usefull to share configurations
     # between SSL and non-ssl Virtualhosts
     Include "{{data.ivhost}}.conf"
-    # Possible values include: debug, info, notice, warn, error, crit,
-    # alert, emerg.
-    LogLevel {{data.log_level}}
-    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-{{ data.server_name }}_error.log"
-    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-{{ data.server_name }}_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-{{ data.server_name }}_access.log" vhost_combined
 </VirtualHost>
 {% endif %}
