--- a/files/etc/apache2/sites-available/default_vh.conf
+++ b/files/etc/apache2/sites-available/default_vh.conf
@@ -30,6 +30,17 @@
     ServerAdmin {{data.serveradmin_mail}}
     ServerName  __default__
     DocumentRoot /var/www/default
+{% if data.no_options_log %}SetEnvIf Request_Method "OPTIONS" dontlog{% endif %}
+    {% if data.use_cronolog %}
+    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-default_access.log" vhost_combined env=!dontlog
+    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_default_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-default_error.log"
+    {% else %}
+    CustomLog "${APACHE_LOG_DIR}/default_access.log" vhost_combined env=!dontlog
+    ErrorLog "${APACHE_LOG_DIR}/default_error.log"
+    {% endif %}
+    # Possible values include: debug, info, notice, warn, error, crit,
+    # alert, emerg.
+    LogLevel {{data.log_level}}
     <IfVersion < 2.3>
         <Directory />
             Options FollowSymLinks
@@ -56,14 +67,6 @@
             Require all granted
         </Directory>
     </IfVersion>
-
-    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_error.log"
-
-    # Possible values include: debug, info, notice, warn, error, crit,
-    # alert, emerg.
-    LogLevel {{data.log_level}}
-
-    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_access.log" vhost_combined
 </VirtualHost>
 {% if data.get('ssl_cert', '') %}
 <VirtualHost {{ data.ssl_interface }}:{{ data.ssl_port }}>
@@ -86,6 +89,18 @@
 {% if data.get('ssl_key', '') %}
     SSLCertificateKeyFile {{data.ssl_key_path}}
 {% endif %}
+    # Possible values include: debug, info, notice, warn, error, crit,
+    # alert, emerg.
+    LogLevel {{data.log_level}}
+
+{% if data.no_options_log %}SetEnvIf Request_Method "OPTIONS" dontlog{% endif %}
+    {% if data.use_cronolog %}
+    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_access.log" vhost_combined env=!dontlog
+    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_default_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_error.log"
+    {% else %}
+    CustomLog "${APACHE_LOG_DIR}/default_access.log" vhost_combined env=!dontlog
+    ErrorLog "${APACHE_LOG_DIR}/default_error.log"
+    {% endif %}
     <IfVersion < 2.3>
         <Directory />
             Options FollowSymLinks
@@ -112,13 +127,4 @@
             Require all granted
         </Directory>
     </IfVersion>
-
-    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_error.log"
-
-    # Possible values include: debug, info, notice, warn, error, crit,
-    # alert, emerg.
-    LogLevel {{data.log_level}}
-
-    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_access.log" vhost_combined
-</VirtualHost>
-{% endif %}
+</VirtualHost>{% endif %}
