fix apache logging

--- a/files/etc/apache2/conf.d/settings.conf
+++ b/files/etc/apache2/conf.d/settings.conf
@@ -104,9 +104,7 @@ SSLSessionCache {{ssl_session_cache}}
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-{% if data.no_options_log %}
-SetEnvIf Remote_Method "OPTIONS" dontlog
-{% endif %}
+{% if data.no_options_log %}SetEnvIf Request_Method "OPTIONS" dontlog{% endif %}
 {% if data.use_cronolog %}
 ErrorLog "|nice -n 10 /usr/bin/cronolog ${APACHE_LOG_DIR}/%Y/%W/%d-main-error.log"
 Customlog "|nice -n 10 /usr/bin/cronolog ${APACHE_LOG_DIR}/%Y/%W/%d-main-access.log" vhost_combined env=!dontlog
