Revert "fix apache logging"
This reverts commit 20590935d45395b9f4d1073dbbb1e97f61898567.

--- a/files/etc/apache2/sites-available/default_vh.conf
+++ b/files/etc/apache2/sites-available/default_vh.conf
@@ -30,13 +30,12 @@
     ServerAdmin {{data.serveradmin_mail}}
     ServerName  __default__
     DocumentRoot /var/www/default
-{% if data.no_options_log %}SetEnvIf Request_Method "OPTIONS" dontlog{% endif %}
     {% if data.use_cronolog %}
-    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-default_access.log" vhost_combined env=!dontlog
-    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_default_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-default_error.log"
+    CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-ssl-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_access.log" vhost_combined env=!dontlog
+    ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_ssl-default_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_error.log"
     {% else %}
-    CustomLog "${APACHE_LOG_DIR}/default_access.log" vhost_combined env=!dontlog
-    ErrorLog "${APACHE_LOG_DIR}/default_error.log"
+    CustomLog "${APACHE_LOG_DIR}/ssl-default_access.log" vhost_combined env=!dontlog
+    ErrorLog "${APACHE_LOG_DIR}/ssl-default_error.log"
     {% endif %}
     # Possible values include: debug, info, notice, warn, error, crit,
     # alert, emerg.
@@ -85,7 +84,6 @@
     SSLCertificateFile {{data.ssl_cert_path}}
     SSLSessionCache {{data.ssl_session_cache}}
     SSLSessionCacheTimeout {{data.ssl_session_timeout}}
-{% endif %}
 {% if data.get('ssl_key', '') %}
     SSLCertificateKeyFile {{data.ssl_key_path}}
 {% endif %}
@@ -93,13 +91,13 @@
     # alert, emerg.
     LogLevel {{data.log_level}}
 
-{% if data.no_options_log %}SetEnvIf Request_Method "OPTIONS" dontlog{% endif %}
     {% if data.use_cronolog %}
     CustomLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current-default_access.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_access.log" vhost_combined env=!dontlog
     ErrorLog "|/usr/bin/nice -n 10 /usr/bin/cronolog -S ${APACHE_LOG_DIR}/current_default_error.log ${APACHE_LOG_DIR}/%Y/%W/%d-ssl-default_error.log"
     {% else %}
     CustomLog "${APACHE_LOG_DIR}/default_access.log" vhost_combined env=!dontlog
     ErrorLog "${APACHE_LOG_DIR}/default_error.log"
+    {% endif %}
     {% endif %}
     <IfVersion < 2.3>
         <Directory />
@@ -127,4 +125,5 @@
             Require all granted
         </Directory>
     </IfVersion>
-</VirtualHost>{% endif %}
+</VirtualHost>
+{% endif %}
