icinga2: Support for matrix alerts

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -27,6 +27,9 @@ NCT_BASE:
       NOTIFICATIONAUTHORNAME: "$notification.author$"
       NOTIFICATIONCOMMENT: "$notification.comment$"
       USEREMAIL: "$user.email$"
+      MX_SERVER: ""
+      MX_TOKEN: ""
+      MX_ROOM: ""
 NC_service_notify_by_email:
   attrs:
     import: ["NCT_BASE"]
@@ -43,6 +46,18 @@ NC_service_notify_by_irc:
   attrs:
     import: ["NCT_BASE"]
     command: [/usr/bin/icinga-service-irc.sh]
+NCT_MATRIX:
+  attrs:
+    command: [/usr/bin/icinga_matrix.sh]
+    import: ["NCT_BASE"]
+NC_host_notify_by_matrix:
+  attrs:
+    import: ["NCT_MATRIX"]
+    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN", "$MX_SERVER", "$MX_ROOM", "host"]
+NC_service_notify_by_matrix:
+  attrs:
+    import: ["NCT_MATRIX"]
+    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN", "$MX_SERVER", "$MX_ROOM", "service"]
 
 #
 # Notifs.
@@ -67,6 +82,14 @@ NT_HOST_IRC:
 NT_SERVICE_IRC:
   attrs:
     command: NC_service_notify_by_irc
+    states: [Warning, Unknown, Critical, OK]
+NT_HOST_MATRIX:
+  attrs:
+    command: NC_host_notify_by_matrix
+    states: [Up, Down]
+NT_SERVICE_MATRIX:
+  attrs:
+    command: NC_service_notify_by_matrix
     states: [Warning, Unknown, Critical, OK]
 
 # BASE COMMAND
@@ -1545,4 +1568,7 @@ U_root:
 U_bot:
   attrs:
     email: ircbot@localhost
+U_matrixbot:
+  attrs:
+    email: matrix@localhost
 # vim: set ft=yaml:
