--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -410,7 +410,7 @@ CSSH_BURP:
       "-l", "root", "-q",
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
-      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_backup_age.py -H $host.name$ -d /data/burp -w $warning$ -c $critical$\""]
+      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_backup_age.py -H $host.name$ -d $data_dir$ -w $warning$ -c $critical$\""]
 C_CHECK_ONE_NAGIOS_ONLY:
   attrs:
     arguments:
