fix burp counters

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -984,6 +984,7 @@ ST_BACKUP_BURP_AGE:
     vars.critical: '4320'
     #vars.n_interval: 7200
     vars.ssh_host: backup.changeme.net
+    vars.data_dir: /data/burp
 ST_TOMCAT:
   attrs:
     check_interval: '10m'
