--- a/etc/makina-states/database.sls.in
+++ b/etc/makina-states/database.sls.in
@@ -657,6 +657,7 @@ backup_configurations:
       - /var/www
       - /var/makina
     exclude_regex:
+      - ".*tmp_sync_rando.*"
       - ".*var.*lib.*docker.*vfs"
       - ".*var.*lib.*docker.*overlay"
       - ".*var.*lib.*docker.*overlay2"
@@ -726,6 +727,7 @@ backup_configurations:
       - /var/lib/docker/trust
       - /var/lib/docker/volumes
     exclude_regex:
+      - ".*tmp_sync_rando.*"
       - ".*var.*lib.*docker.*vfs"
       - ".*var.*lib.*docker.*overlay"
       - ".*var.*lib.*docker.*overlay2"
