nginx: way to globally disable ssl

--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -33,7 +33,7 @@ server {
 }
 
 
-{% if data.get('ssl_cert', '') %}
+{% if data.get('ssl_cert', '') and not data.get('ssl_disabled') %}
 server {
     ssl_ciphers {{data.ssl_ciphers}};
     ssl_session_cache  {{data.ssl_session_cache}};
@@ -112,7 +112,7 @@ server {
     include {{data.basedir}}/status_vhost.conf;
     include {{data.vhost_content_file}};
 }
-{% if data.get('ssl_cert', '') %}
+{% if data.get('ssl_cert', '') and not data.get('ssl_disabled') %}
 server {
     ssl_ciphers {{data.ssl_ciphers}};
     ssl_session_cache  {{data.ssl_session_cache}};
