Backport gunicorn ssl support madness from corpusops

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -149,17 +149,13 @@ http {
     }
 
     # SSL offload support (use_scheme is the proxified scheme)
-    # if X-SSL header is set, we are behind a ssl gateway
+    # if X-SSL/X-FORWADED-PROTO header is set, we are behind a ssl gateway
     # so the scheme is either from the request or
     # forced to ssl if we have the X-SSL header set to 1
     # break loop resolution loop while map resolution
-    map $http_x_ssl $buf_http_x_ssl{
-        default 0;
-        1 1;
-    }
-    map $buf_http_x_ssl $forwarded_ssl_scheme {
+    map "$http_x_ssl$http_x_forwarded_proto" $forwarded_ssl_scheme {
         default $scheme;
-        1 https;
+        "~(1|https)" https;
     }
     # if we come directly from https on localbox without x_ssl, set it.
     map $forwarded_ssl_scheme $http_x_ssl_resolved {
@@ -170,15 +166,46 @@ http {
     # boolean value of https/http: on == https
     # again, we default to the request value
     # but also force it to true when we are forced
-    # to be on ssl via X-SSL
+    # to be on ssl via X-SSL/X-FORWARDED-PROTO
     map $forwarded_ssl_scheme $fastcgi_ssl_toggle {
         default $https;
         https on;
     }
-    map $http_x_ssl $forwarded_server_port {
+
+    map $http_x_ssl_resolved $forwarded_remote_server_port {
+        default $remote_port;
+        1 443;
+    }
+
+    map $http_x_ssl_resolved $forwarded_static_server_port {
+        default 80;
+        1 443;
+    }
+    map $http_x_ssl_resolved $forwarded_server_port {
         default $server_port;
         1 443;
     }
+
+    map $http_x_ssl_resolved $forwarded_server_port {
+        default $server_port;
+        1 443;
+    }
+
+    map $http_x_ssl_resolved $http_x_forwarded_protocol_resolved {
+        default tcp;
+        1 ssl;
+    }
+
+    map $http_x_ssl_resolved $http_x_forwarded_ssl_resolved {
+        default off;
+        1 on;
+    }
+
+    map $http_x_ssl_resolved $http_x_forwarded_proto_resolved {
+        default http;
+        1 https;
+    }
+
     {% if data.get('proxy_temp_path', '') %}
     proxy_temp_path {{data.proxy_temp_path}};
     {% endif %}
