--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -27,7 +27,16 @@ server {
     real_ip_header {{data.real_ip_header}};
     {% endif %}
 
+    # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
+    set $http_x_forwaded_proto $http_x_forwaded_proto_resolved;
+    set $http_x_forwarded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwarded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwarded_protocol $http_x_forwarded_protocol_resolved;
+    # support for typo in old configs
+    set $http_x_forwaded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwaded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwaded_protocol $http_x_forwarded_protocol_resolved;
 
     rewrite ^(.*)$ http://{{data.server_name}}$1 permanent;
 }
@@ -68,7 +77,16 @@ server {
     real_ip_header {{data.real_ip_header}};
     {% endif %}
 
+    # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
+    set $http_x_forwaded_proto $http_x_forwaded_proto_resolved;
+    set $http_x_forwarded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwarded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwarded_protocol $http_x_forwarded_protocol_resolved;
+    # support for typo in old configs
+    set $http_x_forwaded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwaded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwaded_protocol $http_x_forwarded_protocol_resolved;
 
     rewrite ^(.*)$ https://{{data.server_name}}$1 permanent;
 }
@@ -89,6 +107,14 @@ server {
     access_log  {{data.data.logdir}}/{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
+    set $http_x_forwaded_proto $http_x_forwaded_proto_resolved;
+    set $http_x_forwarded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwarded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwarded_protocol $http_x_forwarded_protocol_resolved;
+    # support for typo in old configs
+    set $http_x_forwaded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwaded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwaded_protocol $http_x_forwarded_protocol_resolved;
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
     {% for addr in data.reverse_proxy_addresses %}
     set_real_ip_from {{addr}};
@@ -141,6 +167,14 @@ server {
     access_log  {{data.data.logdir}}/ssl_{{ data.small_name }}-access.log {{data.data.logformat}} if=$method_loggable;
     # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
+    set $http_x_forwaded_proto $http_x_forwaded_proto_resolved;
+    set $http_x_forwarded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwarded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwarded_protocol $http_x_forwarded_protocol_resolved;
+    # support for typo in old configs
+    set $http_x_forwaded_proto $http_x_forwarded_proto_resolved;
+    set $http_x_forwaded_ssl $http_x_forwarded_ssl_resolved;
+    set $http_x_forwaded_protocol $http_x_forwarded_protocol_resolved;
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
     {% for addr in data.reverse_proxy_addresses %}
     set_real_ip_from {{addr}};
