fix matrix notifs

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -53,11 +53,11 @@ NCT_MATRIX:
 NC_host_notify_by_matrix:
   attrs:
     import: ["NCT_MATRIX"]
-    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN", "$MX_SERVER", "$MX_ROOM", "host"]
+    command: [/usr/bin/icinga_matrix.sh, "$$MX_TOKEN", "$$MX_SERVER", "$$MX_ROOM", "host"]
 NC_service_notify_by_matrix:
   attrs:
     import: ["NCT_MATRIX"]
-    command: [/usr/bin/icinga_matrix.sh, "$MX_TOKEN", "$MX_SERVER", "$MX_ROOM", "service"]
+    command: [/usr/bin/icinga_matrix.sh, "$$MX_TOKEN", "$$MX_SERVER", "$$MX_ROOM", "service"]
 
 #
 # Notifs.
