haproxy: letsencrypt TLS challenge support

--- a/files/etc/haproxy/cfg.d/backends.cfg
+++ b/files/etc/haproxy/cfg.d/backends.cfg
@@ -14,6 +14,7 @@ backend {{name}}
 {%  if opt %}    {{opt}}{%endif%}
 {%- endfor %}
 {% for srv in data.get('servers', []) %}
-    server {{ srv.name }} {{srv.bind}} {{srv.opts-}}
+{% set srvname = srv.get('name', 'srv{0}'.format(loop.index0))%}
+    server {{ srvname }} {{srv.bind}} {{srv.get('opts', '')-}}
 {% endfor %}
 {% endfor %}
