--- a/files/etc/nginx/includes/icinga-web2.content.conf
+++ b/files/etc/nginx/includes/icinga-web2.content.conf
@@ -43,7 +43,31 @@ location @php {
   fastcgi_index index.php;
   fastcgi_param SCRIPT_FILENAME $document_root/index.php;
   #
-  fastcgi_pass unix:/var/spool/www/icingaweb2.fpm.sock; 
+  fastcgi_pass unix:/var/spool/www/icingaweb2.fpm.sock;
+}
+
+location ~ ^(/nagvis/?)((.*\.(xml|gif|html|css|font|img|js|jp.g|png|ico).*))$ {
+  alias /usr/share/nagvis/share/;
+  try_files $2 =404;
+}
+
+location ~ ^/nagvis(.*) {
+  include /etc/nginx/fastcgi_params;
+  root /usr/share/nagvis/share/;
+  index index.php;
+  #rewrite ^(/nagvis/?)$ /nagvis/index.php;
+  #
+  fastcgi_param HTTPS $fghttps;
+  #fastcgi_param REMOTE_USER $remote_user;
+  fastcgi_param AUTH_USER $remote_user;
+  #
+  fastcgi_param ICINGAWEB_CONFIGDIR "/etc/icingaweb2";
+  fastcgi_split_path_info ^/nagvis/?(.*\.php)?(.*);
+  fastcgi_index index.php;
+  #
+  fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+  #
+  fastcgi_pass unix:/var/spool/www/nagvis.fpm.sock;
 }
 
 # some css & js must fallback on php (the minified version are
@@ -58,3 +82,4 @@ location / {
   error_page 419 = @php;
   return 419;
 }
+# vim: set et ts=2 sts=2 sw=2:
