--- a/files/etc/icingaweb2/config.ini
+++ b/files/etc/icingaweb2/config.ini
@@ -1,4 +1,6 @@
 {% set settings = salt['mc_icinga_web2.settings']() %}
+[cookie]
+path = /
 [logging]
 log                 = "{{settings.logging_log}}"
 {% if settings.logging_log == 'file' %}
