Add certificate expiry monitoring

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -480,7 +480,7 @@ CSSH_HTTPS_STRING_E:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""]
 CSSH_HTTP_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
@@ -590,6 +590,55 @@ CSSH_HTTPS_STRING_AUTH:
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
       "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""]
+CSSH_HTTPS_CERT_E:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -C $cert_valid_days$ -u $url$ --ssl -p $port$ --sni\""]
+C_HTTPS_CERT_E:
+  attrs:
+    import: ["C_BASE"]
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -C $cert_valid_days$ -u $url$ --ssl -p $port$ --sni\""
+C_HTTPS_CERT_AUTH_E:
+  attrs:
+    import: ["C_BASE"]
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -C $cert_valid_days$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""
+C_HTTPS_CERT:
+  attrs:
+    import: ["C_BASE"]
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -C $cert_valid_days$ -u $url$ --ssl -p $port$ --sni\""
+C_HTTPS_CERT_AUTH:
+  attrs:
+    import: ["C_BASE"]
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -C $cert_valid_days$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""
+CSSH_HTTPS_CERT:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -C $cert_valid_days$ -u $url$ --ssl -p $port$ --sni\""]
+CSSH_HTTPS_CERT_AUTH:
+  attrs:
+    import: ["C_BASE"]
+    command: [
+      "PluginDir + \"/check_by_ssh\"",
+      "--skip-stderr", "-i", "$SSHKEY$",
+      "-l", "root", "-q",
+      "-t", "$ssh_timeout$",
+      "-H", "$ssh_host$", "-p", "$ssh_port$",
+      "-C",
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -C $cert_valid_days$ -u $url$ -a $http_auth$ --ssl -p $port$ --sni\""]
 CSSH_REDIS:
   attrs:
     import: ["C_BASE"]
@@ -1334,6 +1383,12 @@ ST_WEB:
     # vars.http_expect: "HTTP/1.1 302"
     # vars.http_ssl: 0
     # vars.http_auth: 0
+ST_CERT:
+  attrs:
+    import: [ST_WEB]
+    check_interval: '720m'
+    retry_interval: '60m'
+    vars.cert_valid_days: "5"
 ST_APT:
   attrs:
     import: ["ST_CSSH"]
