--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -469,7 +469,7 @@ CSSH_HTTP_STRING_E:
       "-l", "root", "-q",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -p $port$\""]
 CSSH_HTTPS_STRING_E:
   attrs:
     import: ["C_BASE"]
@@ -480,7 +480,7 @@ CSSH_HTTPS_STRING_E:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh  -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$ --sni\""]
 CSSH_HTTP_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
@@ -491,39 +491,39 @@ CSSH_HTTP_STRING_AUTH_E:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""]
 C_HTTP_STRING_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -p $port$\""
 C_HTTPS_STRING_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ --ssl -p $port$\""
 C_HTTP_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""
 C_HTTPS_STRING_AUTH_E:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -e $http_expect$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
 C_HTTP_STRING:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -p $port$\""
 C_HTTPS_STRING:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""
 C_HTTP_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""
 C_HTTPS_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
-    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
+    command: "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ --ssl -p $port$\""
 CSSH_HTTP_STRING:
   attrs:
     import: ["C_BASE"]
@@ -534,7 +534,7 @@ CSSH_HTTP_STRING:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -p $port$\""]
 CSSH_HTTPS_STRING:
   attrs:
     import: ["C_BASE"]
@@ -545,7 +545,7 @@ CSSH_HTTPS_STRING:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ --ssl -p $port$\""]
 CSSH_HTTP_STRING_AUTH:
   attrs:
     import: ["C_BASE"]
@@ -556,7 +556,7 @@ CSSH_HTTP_STRING_AUTH:
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
       "-C",
-      "CUSTM_ADM_SCRIPTS + \"/check_http.sh --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""]
+      "CUSTM_ADM_SCRIPTS + \"/check_http.sh -j $http_method$ --critical $critical$ --onredirect follow --timeout $timeout$ --useragent supervision --warning $warning$ -H $http_servername$ -I $http_host$ -s $strings$ -u $url$ -a $http_auth$ -p $port$\""]
 CSSH_CHECK_MONGODB:
   attrs:
     import: ["C_BASE"]
@@ -1367,6 +1367,7 @@ ST_WEB:
     import: [ST_ALERT]
     check_interval: '2m'
     vars.http_host: $HOSTADDRESS$
+    vars.http_method: GET
     vars.http_servername: $host.name$
     vars.warning: '4'
     vars.critical: '6'
