--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -939,7 +939,7 @@ CSSH_NTP_TIME:
   attrs:
     # handle case where apache listens on an ip
     import: ["C_BASE"]
-    vars.ntp_server: "fr.pool.ntp.org"
+    vars.ntp_server: "0.ubuntu.pool.ntp.org"
     vars.warning: "80"
     vars.critical: "120"
     command: [
