icinga: burp allow backup name delta

--- a/files/icinga2_core_objects.conf
+++ b/files/icinga2_core_objects.conf
@@ -410,7 +410,7 @@ CSSH_BURP:
       "-l", "root", "-q",
       "-t", "$ssh_timeout$",
       "-H", "$ssh_host$", "-p", "$ssh_port$",
-      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_backup_age.py -H $host.name$ -d $data_dir$ -w $warning$ -c $critical$\""]
+      "-C", "CUSTM_ADM_SCRIPTS + \"/check_burp_backup_age.py -H $backup_name$ -d $data_dir$ -w $warning$ -c $critical$\""]
 C_CHECK_ONE_NAGIOS_ONLY:
   attrs:
     arguments:
@@ -1034,6 +1034,7 @@ ST_BACKUP_BURP_AGE:
     #vars.n_interval: 7200
     vars.ssh_host: backup.changeme.net
     vars.data_dir: /data/burp
+    vars.backup_name: "$host.name$"
 ST_TOMCAT:
   attrs:
     check_interval: '10m'
